--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://masaki4423.github.io"
 languageCode = "en-us"
 title = "title"
 copyright = "Copyright © 2008–2019, Steve Francia and the Hugo Authors; all rights reserved."
